--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+                android:screenOrientation="landscape"
+                android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+                android:configChanges="orientation|keyboardHidden"
+                android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -28,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity
+                android:configChanges="orientation|keyboardHidden"
                 android:name="com.journeyapps.barcodescanner.CaptureActivity"
                 android:clearTaskOnLaunch="true"
                 android:screenOrientation="fullSensor"
